[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/unavi-xyz/bevy_vrm"
version = "0.0.12"

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.dependencies]
bevy_shader_mtoon = { path = "crates/bevy_shader_mtoon", version = "0.0.12" }
bevy_vrm = { path = "crates/bevy_vrm", version = "0.0.12" }
gltf_kun_vrm = { path = "crates/gltf_kun_vrm", version = "0.0.12" }
serde_vrm = { path = "crates/serde_vrm", version = "0.0.12" }

bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_asset",
  "bevy_pbr",
  "bevy_scene",
] }
bevy_egui = { version = "0.34.1", default-features = false, features = [
  "default_fonts",
  "open_url",
  "render",
] }
bevy_panorbit_camera = { version = "0.26.0", features = ["bevy_egui"] }
gltf_kun = { version = "0.2.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
