[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition    = "2024"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/unavi-xyz/bevy_vrm"
version    = "0.1.0"

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.dependencies]
bevy_shader_mtoon = { path = "crates/bevy_shader_mtoon", version = "0.1.0" }
bevy_vrm          = { path = "crates/bevy_vrm", version = "0.1.0" }
gltf_kun_vrm      = { path = "crates/gltf_kun_vrm", version = "0.1.0" }
serde_vrm         = { path = "crates/serde_vrm", version = "0.1.0" }

bevy = { default-features = false, version = "0.16.0" }
bevy_egui = { default-features = false, features = [
  "default_fonts",
  "open_url",
  "render",
], version = "0.34.1" }
bevy_panorbit_camera = { features = ["bevy_egui"], version = "0.26.0" }
gltf_kun = { default-features = false, version = "0.2.0" }
serde = { features = ["derive"], version = "1.0.219" }
serde_json = "1.0.140"
thiserror = "2.0.12"

[workspace.metadata.release]
shared-version = true
tag-name       = "v{{version}}"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
