[package]
name = "bevy_vrm"
description = "Bevy plugin for loading VRM avatars."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_shader_mtoon = { path = "../bevy_shader_mtoon", version = "0.0.5" } 
goth-gltf = "0.1.1"
nanoserde = "0.1.35"
thiserror = "1.0"
