[package]
name = "bevy_vrm"
description = "Bevy plugin for loading VRM avatars."
keywords = ["bevy", "vrm"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_gltf_kun = { version = "0.0.8", default-features = false, features = ["import"] }
bevy_shader_mtoon.workspace = true
gltf_kun = { version = "0.0.8", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
