[package]
name = "bevy_shader_mtoon"
description = "Bevy MToon shader."
keywords = ["bevy", "shader", "toon"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_mod_outline = "0.7.0"
bitflags = "2.6.0"

[dev-dependencies]
bevy = "0.13.0"
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
