[package]
name = "bevy_shader_mtoon"
description = "Bevy MToon shader."
keywords = ["bevy", "shader", "toon"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_mod_outline = "0.8.0"
bitflags = "2.4.2"

[dev-dependencies]
bevy = "0.14.0"
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
