[package]
description          = "Bevy MToon shader."
edition.workspace    = true
keywords             = ["bevy", "shader", "toon"]
license.workspace    = true
name                 = "bevy_shader_mtoon"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy.workspace   = true
bevy_mod_outline = "0.10.2"
bitflags         = "2.9.1"

[dev-dependencies]
bevy                           = { default-features = true, workspace = true }
bevy_egui.workspace            = true
bevy_panorbit_camera.workspace = true
