[package]
name = "bevy_vrm"
description = "Bevy plugin for loading VRM avatars."
keywords = ["bevy", "vrm"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["animations"]
animations = ["bevy/animation", "dep:lazy_static", "dep:paste"]

[dependencies]
bevy.workspace = true
bevy_gltf_kun = { version = "0.0.13", default-features = false }
bevy_shader_mtoon.workspace = true
gltf_kun.workspace = true
gltf_kun_vrm.workspace = true
lazy_static = { version = "1.5.0", optional = true }
paste = { version = "1.0.15", optional = true }
serde.workspace = true
serde_vrm = { workspace = true, features = ["bevy"] }
thiserror.workspace = true

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
