[package]
description = "Bevy plugin for loading VRM avatars."
edition.workspace = true
keywords = ["bevy", "vrm"]
license.workspace = true
name = "bevy_vrm"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
animations = ["bevy/animation", "dep:paste"]
default = ["animations"]

[dependencies]
bevy.workspace = true
bevy_gltf_kun = { version = "0.2.0", default-features = false }
bevy_shader_mtoon.workspace = true
gltf_kun.workspace = true
gltf_kun_vrm.workspace = true
paste = { version = "1.0.15", optional = true }
petgraph = "0.8.2"
serde.workspace = true
serde_vrm = { workspace = true, features = ["bevy"] }
thiserror.workspace = true

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
