[package]
description          = "Bevy plugin for loading VRM avatars."
edition.workspace    = true
keywords             = ["bevy", "vrm"]
license.workspace    = true
name                 = "bevy_vrm"
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]
animations = ["bevy/animation", "dep:paste"]
default    = ["animations"]

[dependencies]
bevy.workspace              = true
bevy_gltf_kun               = { default-features = false, version = "0.2.0" }
bevy_shader_mtoon.workspace = true
gltf_kun.workspace          = true
gltf_kun_vrm.workspace      = true
paste                       = { optional = true, version = "1.0.15" }
petgraph                    = "0.8.2"
serde.workspace             = true
serde_vrm                   = { features = ["bevy"], workspace = true }
thiserror.workspace         = true

[dev-dependencies]
bevy                           = { default-features = true, workspace = true }
bevy_egui.workspace            = true
bevy_panorbit_camera.workspace = true
