[package]
name = "serde_vrm"
description = "Serde types for VRM."
keywords = ["serde", "vrm"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
bevy = ["dep:bevy"]

[dependencies]
bevy = { workspace = true, optional = true }
serde.workspace = true
