[package]
edition.workspace = true
license.workspace = true
name = "vrm_viewer"
publish = false
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, default-features = true, features = ["wayland"] }
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
bevy_vrm.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_blob_loader = "0.0.6"
bevy_web_file_drop = "0.0.6"
wasm-bindgen = "0.2.100"
