[package]
edition.workspace    = true
license.workspace    = true
name                 = "vrm_viewer"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy                           = { default-features = true, features = ["wayland"], workspace = true }
bevy_egui.workspace            = true
bevy_panorbit_camera.workspace = true
bevy_vrm.workspace             = true

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_blob_loader = "0.1.0"
bevy_web_file_drop = "0.1.0"
getrandom = { default-features = false, features = [
  "wasm_js",
], version = "0.3.3" } # https://github.com/bevyengine/bevy/issues/17699
wasm-bindgen = "0.2.100"
